# FMIImport.jl

./: .gitignore  CITATION.cff  Project.toml  README.md  callbackFunctions.lib  libcallbackFunctions.dylib
.github/workflows/: CompatHelper.yml  Documentation.yml  Eval.yml  Formatter.yml  TagBot.yml  Test.yml  TestLTS.yml  TestLatest.yml  callbackFunctions.yml
docs/: make.jl
docs/src/: fmi2_library.md  index.md  library.md
ext/: FMIZooExt.jl  SparseArraysExt.jl
src/: FMI2_c.jl  FMI2_convert.jl  FMI2_ext.jl  FMI2_fmu_to_md.jl  FMI2_int.jl  FMI2_md.jl  FMI2_prep.jl  FMI2_sens.jl  FMI3_c.jl  FMI3_convert.jl  FMI3_ext.jl  FMI3_fmu_to_md.jl  FMI3_int.jl  FMI3_md.jl  FMIImport.jl  binary.jl  convert.jl  get_set.jl  info.jl  jacobian.jl  md_parse.jl  parse.jl  sim.jl  utils.jl  zip.jl
src/FMI2/: FMI2_ext.jl  FMI2_prep.jl  FMI2_sens.jl  c.jl  convert.jl  ext.jl  fmu_to_md.jl  int.jl  md.jl  prep.jl  sens.jl
src/FMI2/callbackFunctions/callbackFunctions/: CMakeLists.txt  test.c
src/FMI3/: c.jl  convert.jl  ext.jl  fmu_to_md.jl  int.jl  lssa.jl  md.jl  prep.jl
test/: .gitignore  Project.toml  dir_ders.jl  eval.jl  getter_setter.jl  logging.jl  model_description.jl  model_description_io.jl  runtests.jl  sim_CS.jl  sim_ME.jl  sim_SE.jl  sim_me_bb.jl  sim_zero_state.jl  sparse_jac_experiment.jl  sparsity.jl  state.jl
test/FMI2/: eval.jl  externalLogging.jl  getter_setter.jl  logging.jl  model_description.jl  sensitivities.jl  sim_me_events.jl  state.jl
test/FMI3/: bouncingBall.jl  dir_ders.jl  getter_setter.jl  logging.jl  lssa.jl  model_description.jl  sim_me_events.jl  state.jl  test_functions.jl  vanderPol.jl
(+13 files in other folders)
